@@ -1,3 +1,8 @@
+2007-02-03  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/cipher.c (HAVE_LIBGCRYPT:_cipher_init): Fixed cast
+	  causing stack corruption and overwriting 'algo' on amd64.
+
 2006-12-26  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/munged/cipher.c (_cipher_update): Fixed compiler warning that
